--- a/Products.html
+++ b/Products.html
@@ -1,34 +1,42 @@
-
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <title>KaffeParty</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <title>KaffeParty</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </head>
+
 <body>
 
-<nav class="navbar navbar-expand-sm bg-light justify-content-center">
-  <ul class="navbar-nav">
-    <li class="nav-item">
-      <a class="nav-link" href="index.html">Home</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="Products.html"  style="color: blue;">Products</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="aboutus.html">About US</a>
-    </li>
-  </ul>
-</nav>
+    <body>
+        <div class="container-fluid p-5">
 
-<div class="container-fluid mt-3">
-  <h3>Centered Navbar</h3>
-  <p>Placeholder Text goes here.</p>
-  <p>Placeholder Text goes here</p>
-</div>
+            <img src="kaffe.jpeg" style="width: 200px;float:left;">
+            <h1>KaffeParty</h1>
+        </div>
+        <nav class="navbar navbar-expand-sm bg-light justify-content-center">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link" href="index.html">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="Products.html" style="color: blue;">Products</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="aboutus.html">About US</a>
+                </li>
+            </ul>
+        </nav>
 
-</body>
+        <div class="container-fluid mt-3">
+            <h3>Centered Navbar</h3>
+            <p>Placeholder Text goes here.</p>
+            <p>Placeholder Text goes here</p>
+        </div>
+
+    </body>
+
 </html>
