--- a/Products.html
+++ b/Products.html
@@ -37,6 +37,32 @@
             <p>Placeholder Text goes here</p>
         </div>
 
+        <footer class="footer p-5">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-3">
+                        <h2>KaffeParty</h2>
+                    </div>
+                    <div class="col-md-3">
+                        <h5>copyright</h5>
+                        <p>
+                            KaffeParty is a leading platform that provides
+                            computer science resources and coding challenges for
+                            programmers and technology enthusiasts along with
+                            interview and exam preparations for upcoming aspirants.
+                        </p>
+                    </div>
+                    <div class="col-md-3">
+                        <h5>webmaster</h5>
+                        <ul class="list-unstyled">
+                            <li>Email: info@example.com</li>
+                            <li>Phone: +1233567890</li>
+                            <li>Address: 123 Street, City, Country</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </footer>
     </body>
 
 </html>
