--- a/aboutus.html
+++ b/aboutus.html
@@ -7,6 +7,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <style>
+        body{
+            background-color: bisque;
+        }
+    </style>
 </head>
 
 <body>
@@ -37,7 +42,7 @@
             <p>Placeholder Text goes here</p>
         </div>
 
-        <footer class="footer p-5">
+        <footer class="footer p-5" style="background-color:burlywood;">
             <div class="container">
                 <div class="row">
                     <div class="col-md-3">
@@ -46,10 +51,7 @@
                     <div class="col-md-3">
                         <h5>copyright</h5>
                         <p>
-                            KaffeParty is a leading platform that provides
-                            computer science resources and coding challenges for
-                            programmers and technology enthusiasts along with
-                            interview and exam preparations for upcoming aspirants.
+                            2022-2024.
                         </p>
                     </div>
                     <div class="col-md-3">
