add images to index page

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         body{
             background-color: bisque;
         }
+     
     </style>
 </head>
 
@@ -23,7 +24,7 @@
     <nav class="navbar navbar-expand-sm bg-light justify-content-center">
         <ul class="navbar-nav" >
             <li class="nav-item">
-                <a class="nav-link" href="index.html" style="color: blue;">Home</a>
+                <a class="nav-link" href="index.html" style="color: burlywood;">Home</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="Products.html">Products</a>
@@ -34,12 +35,32 @@
         </ul>
     </nav>
 
+    <!--Content goes here-->
     <div class="container-fluid mt-3">
-        <h3>Centered Navbar</h3>
-        <p>Placeholder Text goes here.</p>
-        <p>Placeholder Text goes here</p>
+        <h3>Who are we?</h3>
+        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+            <img src="https://picsum.photos/300?random=1">
+        </p>
     </div>
 
+    <div class="container-fluid mt-3">
+        <h3>Who are we?</h3>
+        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+            <img src="https://picsum.photos/300?random=2">
+        </p>
+    </div>
+    <div class="container-fluid mt-3">
+        <h3>Why us?</h3>
+        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+            <img src="https://picsum.photos/300?random=3">
+        </p>
+    </div>
+    <div class="container-fluid mt-3">
+        <h3>Kaffeparty, this how it works!</h3>
+        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+            <img src="https://picsum.photos/300?random=4">
+        </p>
+    </div>
     <footer class="footer p-5" style="background-color:burlywood;">
         <div class="container">
             <div class="row">
