--- a/aboutus.html
+++ b/aboutus.html
@@ -31,7 +31,7 @@
                     <a class="nav-link" href="Products.html">Products</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="aboutus.html" style="color: blue;">About US</a>
+                    <a class="nav-link" href="aboutus.html" style="color: burlywood;">About US</a>
                 </li>
             </ul>
         </nav>
