--- a/Products.html
+++ b/Products.html
@@ -8,7 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <style>
-        body{
+        body {
             background-color: bisque;
         }
     </style>
@@ -37,13 +37,46 @@
         </nav>
 
         <!--Content goes here-->
-        <div class="container-fluid mt-3">
-            <h3>Who are we?</h3>
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
-                
-            </p>
+        <div class="container p-5 m-5">
+            <h2>KaffeParty</h2>
+            <div class="container mt-3"></div>
         </div>
 
+        <div class="container p-5 m-5">
+            <h2>KaffeMaskiner</h2>
+
+            <div class="container mt-3">
+                <div class="card" style="width:400px">
+                    <img class="card-img-top" src="https://picsum.photos/200/300?random=1" alt="Card image"
+                        style="width:100%">
+                    <div class="card-body">
+                        <h4 class="card-title">Machine 1</h4>
+                        <p class="card-text">price: 100 SEK</p>
+                        <a href="#" class="btn btn-primary">Add to Cart</a>
+                    </div>
+                </div>
+                <br>
+                <div class="card" style="width:400px">
+                    <img class="card-img-bottom" src="https://picsum.photos/200/300?random=2" alt="Card image"
+                        style="width:100%">
+                    <div class="card-body">
+                        <h4 class="card-title">Machine 2</h4>
+                        <p class="card-text">Price: 200 SEK</p>
+                        <a href="#" class="btn btn-primary">Add to Cart</a>
+                    </div>
+                </div>
+                <div class="card" style="width:400px">
+                    <img class="card-img-bottom" src="https://picsum.photos/200/300?random=2" alt="Card image"
+                        style="width:100%">
+                    <div class="card-body">
+                        <h4 class="card-title">Machine 3</h4>
+                        <p class="card-text">Price: 300 SEK</p>
+                        <a href="#" class="btn btn-primary">Add to Cart</a>
+                    </div>
+                </div>
+            </div>
+
+        </div>
         <footer class="footer p-5" style="background-color:burlywood;">
             <div class="container">
                 <div class="row">
