--- a/index.html
+++ b/index.html
@@ -36,30 +36,35 @@
     </nav>
 
     <!--Content goes here-->
-    <div class="container-fluid mt-3">
+    <div class="container-fluid mt-5">
         <h3>Who are we?</h3>
         <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
-            <img src="https://picsum.photos/300?random=1">
+            
         </p>
+        <img src="https://picsum.photos/300?random=1">
+
     </div>
 
-    <div class="container-fluid mt-3">
-        <h3>Who are we?</h3>
+    <div class="container-fluid mt-5">
+        <h3>What we do?</h3>
         <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
-            <img src="https://picsum.photos/300?random=2">
         </p>
+        <img src="https://picsum.photos/300?random=2">
+
     </div>
-    <div class="container-fluid mt-3">
+    <div class="container-fluid mt-5">
         <h3>Why us?</h3>
         <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
-            <img src="https://picsum.photos/300?random=3">
         </p>
+        <img src="https://picsum.photos/300?random=3">
+
     </div>
-    <div class="container-fluid mt-3">
+    <div class="container-fluid mt-5">
         <h3>Kaffeparty, this how it works!</h3>
         <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
-            <img src="https://picsum.photos/300?random=4">
         </p>
+        <img src="https://picsum.photos/300?random=4">
+
     </div>
     <footer class="footer p-5" style="background-color:burlywood;">
         <div class="container">
